<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="T_CRYO_PUMP_BASE_CTRL" Id="{a35ba28d-1b72-44d7-9282-26cc8bcc5a27}">
    <Declaration><![CDATA[TYPE T_CRYO_PUMP_BASE_CTRL EXTENDS T_RS_BASE_CTRL:
STRUCT
	bStart:		BOOL;	// Control to Start/Stop the pump.
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>