<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="T_CRYO_PUMP_CMD" Id="{2eaec8ac-e3c7-4051-bed9-6a7d474a3536}">
    <Declaration><![CDATA[TYPE T_CRYO_PUMP_CMD :
STRUCT
	cmd:	STRING	:= '';	// Command to send
	length:	DINT	:= 1;	// Reply length
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>